--- a/index.html
+++ b/index.html
@@ -6,145 +6,110 @@
   <title>Romaneio • Login</title>
   <style>
     :root{
-      --bg:#0b1320; --card:#121b2e; --muted:#7b8aa1; --text:#eaf1ff;
-      --primary:#4c8dff; --primary-600:#3a74d6; --success:#19c37d; --danger:#ff6b6b;
-      --shadow:0 18px 40px rgba(0,0,0,.35);
+      --bg:#0b1522; --card:#101b2b; --muted:#8aa3c2; --txt:#eaf2ff;
+      --primary:#3b82f6; --primary-2:#1e40af; --ok:#16a34a; --warn:#f59e0b; --err:#ef4444;
+      --ring: rgba(59,130,246,.2);
     }
-    *{box-sizing:border-box} html,body{height:100%} body{
-      margin:0; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial;
-      background:linear-gradient(180deg,#0b1320 0%, #0d1528 100%); color:var(--text);
-      display:flex; align-items:center; justify-content:center; padding:24px;
-    }
-    .wrap{width:100%; max-width:560px}
-    .row-top{display:flex; gap:10px; justify-content:flex-end; margin-bottom:14px}
-    .btn{
-      appearance:none; border:0; border-radius:12px; padding:10px 14px;
-      background:#1a2340; color:#dfe8ff; cursor:pointer; box-shadow:var(--shadow);
-      display:inline-flex; align-items:center; gap:8px; font-weight:600
-    }
-    .btn:hover{filter:brightness(1.06)}
-    .btn-primary{background:var(--primary)}
-    .card{
-      background:var(--card); border:1px solid rgba(255,255,255,.06);
-      border-radius:18px; padding:26px; box-shadow:var(--shadow);
-    }
-    h1{margin:0 0 10px; font-size:28px; display:flex; gap:10px; align-items:center}
-    .muted{color:var(--muted); font-size:14px}
-    .fld{display:flex; flex-direction:column; gap:6px; margin-top:14px}
-    .fld input{
-      background:#0f1729; color:var(--text); border:1px solid rgba(255,255,255,.08);
-      border-radius:12px; padding:12px 14px; font-size:16px; outline:none
-    }
-    .row{display:flex; gap:10px; margin-top:16px}
-    .row .btn{flex:1}
-    .ok{color:var(--success)} .err{color:var(--danger)}
-    .ver{margin-top:8px; color:#8aa4ff; font-size:12px}
-    /* progress */
-    .progress{height:4px; width:100%; background:#0f1729; border-radius:999px; overflow:hidden; margin:14px 0 4px}
-    .bar{height:100%; width:0%; background:linear-gradient(90deg,#63a4ff,#4c8dff); transition:width .2s}
+    *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--txt);font:500 16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
+    .wrap{min-height:100dvh;display:grid;place-items:center;padding:32px}
+    .card{width:100%;max-width:440px;background:var(--card);padding:28px;border-radius:18px;box-shadow:0 20px 70px rgba(0,0,0,.35)}
+    h1{margin:0 0 6px;font-weight:800;letter-spacing:.2px;font-size:28px}
+    .muted{color:var(--muted);font-size:14px;margin-bottom:24px}
+    label{display:block;font-size:13px;margin:14px 0 6px;color:#cfe1ff}
+    input{width:100%;height:44px;border-radius:12px;border:1px solid transparent;background:#0e1928;color:var(--txt);padding:0 14px;outline:none}
+    input:focus{border-color:var(--primary);box-shadow:0 0 0 6px var(--ring)}
+    .row{display:flex;gap:10px}
+    .btn{appearance:none;border:0;cursor:pointer;border-radius:12px;height:44px;padding:0 16px;font-weight:700}
+    .btn.primary{background:var(--primary);color:white}
+    .btn.ghost{background:transparent;border:1px solid #1e2a3d;color:#d5e7ff}
+    .bar{height:4px;background:#0e1928;border-radius:999px;overflow:hidden;margin:14px 0 6px;display:none}
+    .bar>i{display:block;height:100%;width:0;background:linear-gradient(90deg,var(--primary),#22c55e);transition:width .25s}
+    .top-actions{display:flex;gap:8px;justify-content:flex-end;margin-bottom:8px}
+    small.version{display:block;margin-top:10px;color:#9ab4d5}
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="row-top">
-      <button id="btnTheme" class="btn" title="Tema">🌙/🌞</button>
-      <button id="btnReload" class="btn" title="Forçar atualização">⟳ Atualizar</button>
+<div class="wrap">
+  <div class="card">
+    <div class="top-actions">
+      <button class="btn ghost" id="refresh">⟳ Atualizar</button>
+    </div>
+    <h1>Romaneio</h1>
+    <div class="muted">Acesse com seu usuário e senha.</div>
+
+    <label>Usuário</label>
+    <input id="usuario" placeholder="admin" value="admin" autocomplete="username" />
+
+    <label>Senha</label>
+    <input id="senha" type="password" placeholder="••••••" autocomplete="current-password" />
+
+    <div class="row" style="margin-top:16px">
+      <button class="btn primary" id="entrar">Entrar</button>
+      <button class="btn ghost" id="testar">Testar conexão</button>
     </div>
 
-    <div class="card">
-      <h1>🚚 Romaneio</h1>
-      <div id="conn" class="muted">…</div>
-
-      <div class="fld">
-        <label>Usuário</label>
-        <input id="user" placeholder="admin" autocomplete="username"/>
-      </div>
-      <div class="fld">
-        <label>Senha</label>
-        <input id="pass" type="password" placeholder="••••••" autocomplete="current-password"/>
-      </div>
-
-      <div class="row">
-        <button id="btnLogin" class="btn btn-primary">Entrar</button>
-        <button id="btnPing" class="btn">Testar conexão</button>
-      </div>
-
-      <div class="progress" style="display:none" id="prog"><div class="bar" id="bar"></div></div>
-      <div id="msg" class="muted" style="min-height:22px;margin-top:6px"></div>
-
-      <div class="ver">v1.0.4</div>
-    </div>
+    <div class="bar" id="bar"><i></i></div>
+    <div id="msg" class="muted"></div>
+    <small class="version">v1.0.4</small>
   </div>
+</div>
 
 <script>
-const VERSION="v1.0.4";
-/* ====== CONFIG ====== */
-const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
+  // === CONFIG ===
+  const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
 
-/* ====== UI helpers ====== */
-const qs = s=>document.querySelector(s);
-const msg = (t, cls="muted") => { qs("#msg").className=cls; qs("#msg").textContent=t||""; };
-const setConn = (ok, txt) => qs("#conn").innerHTML = ok ? `Conectado • <span class="ok">${txt}</span>` : `<span class="err">${txt}</span>`;
-const prog = (v)=>{ qs("#prog").style.display="block"; qs("#bar").style.width = (v*100).toFixed(0)+"%"; if(v>=1) setTimeout(()=>qs("#prog").style.display="none",350); };
+  // === helpers ===
+  const $ = sel => document.querySelector(sel);
+  const bar = $("#bar"), barFill = $("#bar>i");
+  function loading(on=true){ bar.style.display = on?'block':'none'; requestAnimationFrame(()=> barFill.style.width = on?'95%':'0'); }
+  function say(t){ $("#msg").textContent = t||''; }
 
-/* ====== THEME ====== */
-(function(){
-  const key="rom_theme";
-  const apply=()=>{ document.documentElement.dataset.theme=localStorage.getItem(key)||"dark"; };
-  apply();
-  qs("#btnTheme").onclick=()=>{ localStorage.setItem(key, (localStorage.getItem(key)==="dark"?"light":"dark")); apply(); };
-  // dark/light real
-  const isDark = (localStorage.getItem(key) ?? "dark") === "dark";
-  if(isDark){ document.body.style.background = "linear-gradient(180deg,#0b1320 0%, #0d1528 100%)"; }
-})();
-
-/* ====== RELOAD ====== */
-qs("#btnReload").onclick=()=>{ location.href = location.pathname + "?v=" + Date.now(); };
-
-/* ====== API ====== */
-async function apiPost(path, data){
-  const r = await fetch(API_BASE + "?path=" + encodeURIComponent(path), {
-    method:"POST", headers:{ "Content-Type":"text/plain;charset=utf-8" },
-    body: JSON.stringify(data||{}), mode:"cors", credentials:"omit",
-  });
-  if(!r.ok) throw new Error("HTTP "+r.status);
-  return await r.json();
-}
-
-/* ====== PING ON LOAD ====== */
-(async()=>{
-  try{
-    const r = await apiPost("/ping", {});
-    setConn(true, new Date().toLocaleString());
-  }catch(e){
-    setConn(false,"Falha ao conectar");
+  async function post(path, body){
+    const r = await fetch(API_BASE + "?path=" + encodeURIComponent(path), {
+      method: "POST",
+      headers: {"Content-Type":"application/json;charset=utf-8"},
+      body: JSON.stringify(body||{})
+    });
+    return r.json();
   }
-})();
 
-/* ====== Ações ====== */
-qs("#btnPing").onclick = async ()=>{
-  try{ prog(.2); const r=await apiPost("/ping",{}); prog(1); msg("Conexão OK ✓","ok"); }
-  catch(e){ prog(1); msg("Falha ao conectar","err"); }
-};
+  $("#refresh").onclick = () => { localStorage.removeItem('token'); sessionStorage.removeItem('token'); location.reload(true); };
 
-qs("#btnLogin").onclick = async ()=>{
-  const usuario = qs("#user").value.trim() || "admin";
-  const senha   = qs("#pass").value.trim();
-  if(!senha){ msg("Informe a senha","err"); return; }
-  try{
-    prog(.2);
-    const r = await apiPost("/login",{usuario,senha});
-    prog(.6);
-    if(r.error){ prog(1); msg(r.error,"err"); return; }
-    // guarda sessão
-    localStorage.setItem("rom_session", JSON.stringify(r.session));
-    prog(1);
-    msg("Login OK. Redirecionando…","ok");
-    location.href = "app.html?v="+Date.now();
-  }catch(e){
-    prog(1); msg("Erro: "+e.message,"err");
-  }
-};
+  $("#testar").onclick = async ()=>{
+    try{
+      loading(true);
+      const r = await post("/ping",{});
+      say(r.pong ? "Conectado • " + (new Date()).toLocaleString() : "Falhou");
+    }catch(e){ say("Erro: " + e.message); }
+    finally{ loading(false); }
+  };
+
+  $("#entrar").onclick = async ()=>{
+    const usuario = $("#usuario").value.trim();
+    const senha = $("#senha").value.trim();
+    if(!usuario||!senha){ say("Informe usuário e senha."); return; }
+
+    try{
+      loading(true);
+      const data = await post("/login",{usuario,senha});
+      if(data.error){ say("Erro: "+data.error); return; }
+
+      const t = data.session?.token;
+      if(!t){ say("Falha ao obter sessão."); return; }
+
+      // salva em ambos + passa por URL (fallback)
+      localStorage.setItem('token', t);
+      sessionStorage.setItem('token', t);
+      location.href = "app.html?t=" + encodeURIComponent(t);
+    }catch(e){
+      say("Erro de rede: " + e.message);
+    }finally{
+      loading(false);
+    }
+  };
+
+  // auto-testar leve na abertura
+  (async()=>{ try{ const r=await post("/ping",{}); if(r.pong) say("Conectado • "+(new Date()).toLocaleString()); }catch(_){}})();
 </script>
 </body>
 </html>
